infra/gitops-platform/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo
  labels:
    istio-injection: enabled
